tests/baselines/reference/jsFileCompilationDuplicateFunctionImplementation.errors.txt
error TS5101: Flag 'out' is deprecated and will stop functioning in TypeScript 5.5. Specify 'ignoreDeprecations: "5.0"' to silence this error.
tests/cases/compiler/a.ts(1,10): error TS2393: Duplicate function implementation.


!!! error TS5101: Flag 'out' is deprecated and will stop functioning in TypeScript 5.5. Specify 'ignoreDeprecations: "5.0"' to silence this error.
==== tests/cases/compiler/b.js (0 errors) ====
    function foo() {
        return 10;
    }
==== tests/cases/compiler/a.ts (1 errors) ====
    function foo() {
             ~~~
!!! error TS2393: Duplicate function implementation.
        return 30;
    }
    
    